--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "trail-buddy",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@tailwindcss/ui": "^0.6.2",
+    "@tailwindcss/ui": "0.6.2",
     "next": "9.5.3",
+    "nprogress": "0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "tailwindcss": "^1.8.10"
+    "tailwindcss": "1.8.10"
   }
 }
