--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@tailwindcss/ui": "0.6.2",
     "next": "9.5.3",
     "nprogress": "0.2.0",
+    "postcss-import": "^12.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "tailwindcss": "1.8.10"
