--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TRAIL_KEY='200336642-7ec33389ef4df8d74aa21116b59cd0dc'
-WEATHER_KEY=
+WEATHER_KEY='e92d5a31fa874f17abcd73f5007f06c9'
 GEO_KEY='hfOaz02p26S6Ug5zqlaUhL0IxBII8f29'
